# RPackageCppExamples

./: .gitignore
SharedLibrariesExample/: DESCRIPTION  NAMESPACE
SharedLibrariesExample/R/: RcppExports.R
SharedLibrariesExample/man/: SharedLibrariesExample-package.Rd
SharedLibrariesExample/src/: Makevars  RcppExports.cpp  rcpp_hello_world.cpp
include/: shared_function.h
inst/: run_examples.R
src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  install_manifest.txt  shared_function.cpp  static_function.cpp
